--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container bg-secondary text-center mt-3 p-3" style="width: 230px;">
         <h2 class="text-center text-white">Greatest <br> Number?</h2>
         <form>
-            <input id="a1" type="text" class="text-center mb-2" placeholder="Number 1">
-            <input id="b1" type="text" class="text-center mb-2" placeholder="Number 2"><br>
+            <input id="a1" type="text" class="text-center mb-2 w-100" placeholder="Number 1">
+            <input id="b1" type="text" class="text-center mb-2 w-100" placeholder="Number 2"><br>
             <button onclick="greatest()" type="submit" class="btn btn-info">check</button>
         </form>
 </div>
